# transvoxel_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sphere_10_10.cpp  sphere_10_3.cpp
tests/: sphere_10_10.txt  sphere_10_3.txt
transvoxel/: density.hpp  extraction.hpp  structs.hpp  transition_sides.cpp  transition_sides.hpp  voxel_coordinates.cpp  voxel_coordinates.hpp  voxel_source.hpp
transvoxel/implementation/: aux_tables.cpp  aux_tables.hpp  density_caching.hpp  extractor.hpp  rotation.cpp  rotation.hpp  table_wrappers.hpp  transvoxel.h
